# api-client

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  config.rs  fs.rs  git.rs  main.rs  request.rs  types.rs
src/components/: git_panel.rs
