[package]
name = "api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
# Optional, for default bundled assets
gpui-component-assets = "0.5.0"
anyhow = "1.0"
reqwest = { version = "0.12.26", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0"
