[package]
name = "api-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.deb]
copyright = "2025, M1n-74316D65"
license-file = "LICENSE"
extended-description = """\
A modern, high-performance API client built with Rust and GPUI."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/api-client",
        "usr/bin/",
        "755",
    ],
    [
        "build/linux/api-client.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "assets/icon.png",
        "usr/share/icons/hicolor/512x512/apps/api-client.png",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/api-client", dest = "/usr/bin/api-client", mode = "755" },
    { source = "build/linux/api-client.desktop", dest = "/usr/share/applications/api-client.desktop", mode = "644" },
    { source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/api-client.png", mode = "644" },
]

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
# Optional, for default bundled assets
gpui-component-assets = "0.5.0"
anyhow = "1.0"
reqwest = { version = "0.12.26", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
dirs = "5.0"

[build-dependencies]
winres = "0.1"
